# ray-tracer

./: Cargo.toml
src/: main.rs
src/math/: vector.rs
src/model/: camera.rs  color.rs  mod.rs  model.rs  scene.rs
src/model/materials/: diffuse.rs  material.rs
src/model/objects/: collidable.rs  mod.rs  object.rs  plane.rs  sphere.rs  traits.rs
src/model/tracer/: ray.rs
src/render/: mod.rs  ray.rs  tracer.rs
