[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.89"
